MDEV-4801 - Server crashes in my_strdup on setting             innodb_ft_user_stopword_table to DEFAULT

Setting plugin string variable with PLUGIN_VAR_MEMALLOC flag
to NULL causes server crash.

mysql-test/suite/sys_vars/r/innodb_ft_user_stopword_table_basic.result:
  Reset innodb_ft_user_stopword_table. Also tests MDEV-4801.
mysql-test/suite/sys_vars/t/innodb_ft_user_stopword_table_basic.test:
  Reset innodb_ft_user_stopword_table. Also tests MDEV-4801.
sql/sql_plugin.cc:
  When we got NULL value, do not strdup(NULL).